# sfp-creator

./: .gitignore  CMakeLists.txt  README.md  idiot.txt  install_dep.sh  release.ps1  release.sh  software_patch_creator - Ярлык.lnk  test.sh
archiver/: CMakeLists.txt  archive_structs.h  archiver.cpp  archiver.h
configurator/: CMakeLists.txt  Configurator.cpp
configurator/config/: Config.cpp  Config.h
configurator/run/: Run.cpp  Run.h
configurator/utils/: Utils.cpp  Utils.h
examples/: CMakeLists.txt  archive.c  archive.cpp  sfp_config copy.json  sfp_config.json
external_libs/: CMakeLists.txt
external_libs/lib_lz4/: CMakeLists.txt
itest/: jest.config.js  package-lock.json  package.json  sfpc.patcher.test.js
itest/coverage/: clover.xml
itest/coverage/lcov-report/: index.html
patcher/: CMakeLists.txt  archive.c  archive.h  archiver.cpp  archiver.h  main.cpp  patcher.cpp  patcher.h
shared/: json.h  liblog.h  path_lib.h  utils.h
tests/: CMakeLists.txt
tests/archiver_test/: CMakeLists.txt  archiver_test_compression.cpp  archiver_test_generate.cpp  crc_of_file.cpp
tests/json_test/: CMakeLists.txt  json_test_arr.cpp  json_test_obj.cpp  json_test_obj_in_arr.cpp
tests/patcher_test/: CMakeLists.txt  unpack_test.cpp
tests/path_test/: CMakeLists.txt  path_append_test.cpp
